Fixed sticky items low z-index

--- a/styles/scss/all.scss
+++ b/styles/scss/all.scss
@@ -61,6 +61,7 @@ img {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  z-index: 9;
 }
 
 .centerContent {
